Changed to binary when save

--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -37,7 +37,7 @@ GHOST_TITLE                 =    Ghost mode
 GROUP_TITLE                 =    Group
 HELP_1_TITLE                =    This is the tutorial section. You will learn how to navigate through the game and some basic game features. Hope you enjoy it! Press any key to continue.
 HELP_2_TITLE                =    There will always be hints like these. If you don't know what to do, look for these at the bottom of the screen. They will always be there for you.
-HELP_3-1_TITLE              =    Press Back to continue.
+HELP_3-1_TITLE              =    Press Space to continue.
 HELP_3_TITLE                =    Accidentally turned on the music? Here is where you can turn it off. But don't turn it off yet, these tracks were very carefully chosen to make your improve your playing experience.
 HELP_4-1_TITLE              =    Speed up your mind with Rush mode. There are three options available: one, five and fifteen minutes.
 HELP_4-2_TITLE              =    Or just stick with the old classic normal mode we all love <3
