--- a/CaroGame/asset/language/vi.txt
+++ b/CaroGame/asset/language/vi.txt
@@ -37,7 +37,7 @@ GHOST_TITLE                 =    Đi Nháp
 GROUP_TITLE                 =    Nhóm
 HELP_1_TITLE                =    Đây là phần hướng dẫn. Bạn sẽ học cách điều hướng trong trò chơi và một số tính năng cơ bản của trò chơi. Hy vọng là bạn sẽ thích nó! Ấn phím bất kỳ để tiếp tục.
 HELP_2_TITLE                =    Mọi màn hình đều sẽ có những mục hướng dẫn như thế này. Nếu bạn không biết phải làm gì, hãy tìm những mục này ở cuối màn hình. Chúng sẽ luôn ở đó giúp đỡ bạn.
-HELP_3-1_TITLE              =    Ấn Quay lại để tiếp tục
+HELP_3-1_TITLE              =    Ấn Dấu cách để tiếp tục
 HELP_3_TITLE                =    Vô tình bật nhạc? Đây là nơi bạn có thể tắt nó đi. Nhưng đừng vội làm thế, những bản nhạc này đã được lựa chọn rất cẩn thận để giúp cải thiện trải nghiệm cuộc chơi của bạn.
 HELP_4-1_TITLE              =    Tăng tốc trí óc của bạn với chế độ Tốc độ. Có ba tùy chọn có sẵn: 1, 5 và 15 phút.
 HELP_4-2_TITLE              =    Hoặc thư giãn hơn chế độ Bình thường kinh điển mà tất cả chúng ta đều yêu thích <3
